# fastosc

./: Makefile  README.md  pyproject.toml  requirements.txt
src/fastosc/dispatcher/: __init__.py  handler.py
src/fastosc/docs/: __init__.py
src/fastosc/message/: arg_value.py  convert.py  osc_bundle.py  osc_bundle_builder.py  osc_message.py  osc_message_builder.py
src/fastosc/message/parsing/: ntp.py  osc_types.py
src/fastosc/router/: __init__.py
src/fastosc/server/: dispatcher_server.py  server_base.py
src/fastosc/server/udp/: udp_pull_server.py  udp_server_base.py
