[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastosc"
version = "0.0.1"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Modern Python Library for OSC, using best practices such as typing, linting/formatting - inspired by FastAPI"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"