[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastosc"
version = "0.0.2"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Modern Python Library for OSC, using best practices such as typing, linting/formatting - inspired by FastAPI"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI"
]

[project.urls]
Homepage = "https://github.com/oslo1989/fastosc"
Issues = "https://github.com/oslo1989/fastosc/issues"

[tool.ruff]
select = ["E", "F", "B", "W", "I" ,"UP", "ANN", "BLE", "FBT", "A", "COM", "C4", "DTZ", "PIE", "Q", "RET", "SIM", "PL", "RUF"]
extend-select = ["I"]
fixable = ["ALL"]
line-length = 120
target-version = "py37"
