[build-system]
requires = ["setuptools ~=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastosc"
version = "0.0.6"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Modern Python Library for OSC, using best practices such as typing, linting/formatting - inspired by FastAPI"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI"
]

[project.urls]
Homepage = "https://github.com/oslo1989/fastosc"
Issues = "https://github.com/oslo1989/fastosc/issues"

[tool.ruff]
lint.select = ["E", "F", "B", "W", "I" ,"UP", "ANN", "BLE", "FBT", "A", "COM", "C4", "DTZ", "PIE", "Q", "RET", "SIM", "PL", "RUF"]
lint.extend-select = ["I"]
lint.fixable = ["ALL"]
line-length = 120
lint.ignore = ["ANN101"]
target-version = "py37"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]